[package]
name = "clap-num"
version = "0.2.0"
authors = ["Alex M. <alexmgit@protonmail.com>"]
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "Number parsers for clap v3."
edition = "2018"
license = "MIT"
repository = "https://github.com/newAM/clap-num/"
documentation = "https://docs.rs/clap-num"
readme = "README.md"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
