[package]
name = "clap-num"
version = "0.2.0"
rust-version = "1.56"  # update MSRV in CI
authors = ["Alex Martens <alexmgit@protonmail.com>"]
keywords = ["argument", "cli", "arg", "parser", "parse"]
categories = ["command-line-interface"]
description = "Number parsers for clap"
edition = "2021"
license = "MIT"
repository = "https://github.com/newAM/clap-num/"
readme = "README.md"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
clap = { version = "3", features = ["derive"] }
